--- a/fineroof/app/template/sass/layout/_contacts.scss
+++ b/fineroof/app/template/sass/layout/_contacts.scss
@@ -1,5 +1,8 @@
 .contacts {
 	margin-top: 67px;
+	@include phone {
+		margin-top: 30px;
+	}
 	&__top {
 		width: 100%;
 		display: -webkit-flex;
@@ -7,7 +10,10 @@
 		display: flex;
 		align-items: flex-start;
 		justify-content: space-between;
-
+		@include adaptive(610) {
+			flex-direction: column;
+			align-items: center;
+		}
 
 	}
 	&__icon {
@@ -24,6 +30,10 @@
 		letter-spacing: 0.42px;
 
 		margin-bottom: 30px;
+		@include adaptive(775) {
+			color: #1bc09b;
+			margin-bottom: 16px;
+		}
 	}
 	&__value {
 		color: #232323;
@@ -46,6 +56,9 @@
 		justify-content: center;
 
 		padding: 129px 0px 79px;
+		@include adaptive(775) {
+			padding: 95px 0px 57px;
+		}
 		& a {
 			color: #222222;
 			font-size: 67px;
@@ -56,6 +69,16 @@
 			border-bottom: 11px solid  #1bc09b;
 
 			transition: .3s;
+			@include adaptive(1075) {
+				font-size: 27px;
+				line-height: 36px;
+				border-bottom: 6px solid #1bc09b;
+			}
+			@include phone {
+				font-size: 21px;
+				font-weight: 700;
+				line-height: 30px;
+			}
 			&::before {
 				content: '';
 				width: 310px;
@@ -73,6 +96,13 @@
 
 				transition: .3s;
 				transform: translateY(-50%);
+				@include adaptive(1075) {
+					width: 250px;
+					height: 40px;
+					-webkit-background-size: contain;
+					background-size: contain;
+					left: -100%;
+				}
 			}
 			&:hover {
 				border-bottom-color: transparent;
@@ -86,6 +116,9 @@
 	}
 	&__phone {
 		margin-bottom: 40px;
+		@include adaptive(775) {
+			margin-bottom: 20px;
+		}
 	}
 	&__name {
 		color: #222222;
@@ -101,6 +134,13 @@
 
 		margin-bottom: 30px;
 		cursor: pointer;
+		@include adaptive(775) {
+			font-size: 21px;
+			font-weight: 700;
+			line-height: 30px;
+			letter-spacing: 1.04px;
+			margin-bottom: 25px;
+		}
 		& .icon-top {
 			margin-bottom: -4px;
 		}
@@ -112,6 +152,10 @@
 	}
 	&__props {
 		margin-bottom: 72px;
+		@include adaptive(775) {
+			margin-bottom: 30px;
+		}
+
 	}
 	&__column {
 		width: 50%;
@@ -120,8 +164,21 @@
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+		@include adaptive(610) {
+			width: 100%;
+			align-items: center;
+		}
+		@include phone {
+			align-items: flex-start;
+		}
 	}
 	&__wrapper {
 		padding-left: 107px;
+		@include adaptive(1075) {
+			padding-left: 40px;
+		}
+		@include phone {
+			padding-left: 0;
+		}
 	}
 }
