--- a/fineroof/app/template/sass/layout/_header.scss
+++ b/fineroof/app/template/sass/layout/_header.scss
@@ -3,7 +3,9 @@
 	&_inner {
 		padding-bottom: 40px;
 		& #{$parent}__feature {
-			display: none;
+			@include adaptive(610) {
+				display: none;
+			}
 		}
 	}
 	padding-bottom: 127px;
